fixing alignment of profile section items

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 h4 {
 	margin-bottom: 15px;
+	text-align: center;
 }
 
 .box-container {
@@ -86,9 +87,10 @@ h4 {
 
 
 #profile {
-	margin-right: 10%;
+	
 	margin-left: 10%;
 	padding-top: 5%;
+	padding-bottom: 5%;
 }
 
 .profpic {
@@ -101,10 +103,20 @@ h4 {
 
 .section-container {
 	display: inline-flex;
+	justify-content: center;
+}
+
+.headbox {
+	width:100%;
+	vertical-align: middle;
+	text-align: center;
+	margin-bottom: 40px;
+
 }
 
 .box-1 {
-	width: 30%;
+	width: 25%;
+
 	
 }
 
